Bug fixes and align extend classes

--- a/app/templates/assets/sass/_base.scss
+++ b/app/templates/assets/sass/_base.scss
@@ -135,34 +135,39 @@ nav ul { list-style: none; list-style-image: none; }
 	.youtube { background: $color-youtube; }
 }
 
-// Triangle shape - http://css-tricks.com/examples/ShapesOfCSS/
-.triangle-right { position: relative; }
 
-.triangle-up:before, .triangle-down:before, .triangle-right:before {
-	content: '';
-	width: 0; 
-	height: 0; 
-	position: absolute;
-	border-style: solid;
-	z-index: 10;
-	transform: scale(0.9999); // Apllies antialias to the shape
+// Centrally align a block, align parent if the content becomes blurry - http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
+.align-parent, .align-parent-3d {
+	overflow: hidden;
 }
-.triangle-up:before {
-	top: -20px;
-	border-width: 0 20px 20px 20px;
-	border-color: transparent transparent #000 transparent;
+.align-parent-3d {
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
-.triangle-down:before {
-	bottom: -20px;
-	border-width: 20px 20px 0 20px;
-	border-color: #000 transparent transparent transparent;
-}
-.triangle-right:before {
-	top: 0px;
-	right: -13px;
-	border-width: 26px 0 26px 13px;
-	border-color: transparent transparent transparent #000;
-}
+	.align-center-vertical {
+		position: relative;
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+	}
+	.align-center-horizontal {
+		position: relative;
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+	.align-center-both {
+		position: relative;
+		left: 50%;
+		top: 50%;
+		-webkit-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+	}
+
 
 
 // Sliders
@@ -176,7 +181,7 @@ nav ul { list-style: none; list-style-image: none; }
 	img { width: auto; height: auto; }
 }
 	.cycle-prev, .cycle-next { 
-		@include align-center-vertical;
+		@extend .align-center-vertical;
 		position: absolute;
 		color: #fff;
 		@include rem(font-size, 50px);
